fix: CORS配置支持localhost动态端口, data.sql seed条件从car表改为各自表